alpm-solve/tests/snapshots/integration__test_upgrade_conflicts_with_provide_full.snap
---
source: alpm-solve/tests/integration.rs
expression: success
---
:: [^]   upgrade: rustup                    from core           1-1─────────────► 2-1
