alpm-solve/tests/snapshots/integration__test_upgrade_depends_no_pkgrel_full.snap
---
source: alpm-solve/tests/integration.rs
expression: success
---
:: [^]   upgrade: a                         from core           1-1─────────────► 2-1
:: [+]   install: b                         from core           1-1
