alpm-solve/tests/snapshots/integration__test_upgrade_does_not_switch_providers_partial.snap
---
source: alpm-solve/tests/integration.rs
expression: success
---
[^]     upgrade: a                         from core           1-1─────────────► 2-1
[^]     upgrade: dep-c                     from core           1-1─────────────► 2-1
[^]     upgrade: e                         from core           1-1─────────────► 2-1
