alpm-solve/tests/snapshots/integration__test_upgrade_multilib_full.snap
---
source: alpm-solve/tests/integration.rs
expression: success
---
[^]     upgrade: a                         from core           1-1─────────────► 2-1
[^]     upgrade: lib32-a                   from core           1-1─────────────► 2-1
