alpm-solve/tests/snapshots/integration__test_upgrade_partial.snap
---
source: alpm-solve/tests/integration.rs
expression: success
---
:: [^]   upgrade: bash                      from core           5.2.15-1────────► 5.2.21-1
:: [^]   upgrade: coreutils                 from core           9.3-1───────────► 9.4-1
:: [^]   upgrade: epic-fail                 from package cache  1-1─────────────► 2-1
:: [^]   upgrade: gcc-libs                  from core           13.2.0-1────────► 14.2.0-1
:: [^]   upgrade: git                       from extra          2.42.0-1────────► 2.43.0-1
:: [^]   upgrade: glibc                     from core           2.38-1──────────► 2.39-1
:: [^]   upgrade: htop                      from custom         3.2.0-1─────────► 3.3.0-1
:: [^]   upgrade: libxml2                   from extra          2.11.0-1────────► 2.12.0-1
:: [^]   upgrade: libxslt                   from extra          1.1.38-1────────► 1.1.39-1
:: [^]   upgrade: ncurses                   from core           6.3-1───────────► 6.4-1
:: [+]   install: newdep                    from extra          1-1
:: [^]   upgrade: openssl                   from core           3.1.0-1─────────► 3.2.0-1
:: [^]   upgrade: python                    from extra          3.11.0-1────────► 3.12.1-1
:: [^]   upgrade: python-pip                from custom         23.0-1──────────► 24.0-1
:: [^]   upgrade: python-virtualenv         from custom         20.24.0-1───────► 20.25.0-1
:: [^]   upgrade: readline                  from core           8.1-1───────────► 8.2-1
:: [^]   upgrade: ruby                      from extra          3.2.0-1─────────► 3.3.0-1
:: [^]   upgrade: ruby-bundler              from custom         2.4.0-1─────────► 2.5.0-1
:: [^]   upgrade: sqlite                    from extra          3.44.0-1────────► 3.45.0-1
:: [^]   upgrade: tmux                      from custom         3.3-1───────────► 3.4-1
:: [^]   upgrade: zlib                      from core           1.3.0-1─────────► 1.3.1-1
