alpm-solve/tests/snapshots/integration__test_upgrade_versioned_soname_partial.snap
---
source: alpm-solve/tests/integration.rs
expression: success
---
[^]     upgrade: a                         from core           1-1─────────────► 2-1
[^]     upgrade: b                         from core           1-1─────────────► 2-1
